# vllm-inference-lab

./: .gitignore  README.md  pyproject.toml
docs/: engine.md  kernels.md  paged-attention.md  reference-oracles.md  setup.md
tests/: test_engine.py  test_kernels.py  test_paged.py  test_reference.py  test_smoke.py
tests/engine/: conftest.py  test_bench.py  test_differential.py  test_hf_reference.py  test_precision.py  test_types.py  test_vllm_runner.py
vllab/: __init__.py  cli.py  numerics.py
vllab/engine/: __init__.py  bench.py  differential.py  hf_reference.py  precision.py  types.py  vllm_runner.py
vllab/kernels/: __init__.py  harness.py  matmul_triton.py
vllab/matrix/: __init__.py
vllab/paged/: __init__.py  block_table.py  faults.py  paged_attention.py
vllab/reference/: __init__.py  attention.py  kvcache.py  matmul.py
